...
                    startTime = startTime.value,
                    color = selectedOption.value.color,
                    focusSessions = focusSessions.value,
                )
            )
            setShowSaveTemplateDialog(false)
            _eventsFlow.trySend(UiEvents.ShowSnackbar("Template saved!"))
            _eventsFlow.trySend(UiEvents.NavigateBack)
        }
    }

    fun addTask(task: Task) {
        viewModelScope.launch {
            tasksRepository.addTask(task)
            reset()
            setEndTime(today().time)
            _eventsFlow.trySend(UiEvents.ShowSnackbar("Task added!"))
            _eventsFlow.trySend(UiEvents.NavigateBack)
        }
    }

    private fun reset() {
        setFocusSessions(1)
...
